Support for .env

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,ts,tsx,css,json,yml}]
+[*.{js,ts,tsx,css,json,yml,html}]
 charset = utf-8
 indent_style = space
 indent_size = 2
