--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/webpack-env": "^1.13.6",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "dotenv-webpack": "^1.5.7",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
