--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv-webpack": "^1.5.7",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
