--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --watch",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "tslint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'"
+    "tslint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
+    "analyze-bundle": "webpack --config webpack.analyze.js --profile"
   },
   "jest": {
     "transform": {
@@ -45,6 +46,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "devserver-qrcode-webpack-plugin": "0.0.6",
     "dotenv-webpack": "^1.5.7",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -66,6 +68,7 @@
     "typescript": "^3.0.3",
     "uglifyjs-webpack-plugin": "^2.0.0",
     "webpack": "^4.19.0",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.4"
