--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ts-jest": "^23.1.4",
     "ts-loader": "^5.1.1",
     "tslint": "^5.11.0",
+    "tslint-loader": "^3.6.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.3",
     "uglifyjs-webpack-plugin": "^2.0.0",
