--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "webpack-dev-server --hot --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "tslint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
     "analyze-bundle": "webpack --config webpack.analyze.js --profile"
@@ -38,11 +38,18 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
     "@types/enzyme": "^3.1.14",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.10.1",
     "@types/webpack-env": "^1.13.6",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
@@ -60,6 +67,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-modules-values": "^1.3.0",
+    "react-hot-loader": "^4.3.11",
     "style-loader": "^0.23.0",
     "ts-jest": "^23.1.4",
     "ts-loader": "^5.1.1",
