--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "tabWidth": 2,
-  "singleQuote": true,
-  "trailingComma": "es5",
   "semi": true,
-  "arrowParens": "always"
+  "trailingComma": "all",
+  "singleQuote": true,
+  "printWidth": 128,
+  "tabWidth": 2
 }
