--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --watch",
     "start": "webpack-dev-server --hot --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "tslint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
+    "lint:ts": "eslint './**/*.{js,ts,tsx}'",
+    "lint:css": "stylelint \"src/**/*.tsx\"",
     "analyze-bundle": "webpack --config webpack.analyze.js --profile"
   },
   "jest": {
@@ -17,7 +18,7 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "setupTestFrameworkScriptFile": "<rootDir>/src/setup-tests.ts",
+    "setupFilesAfterEnv": ["<rootDir>/src/setup-tests.ts"],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
@@ -38,54 +39,58 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/enzyme": "^3.1.14",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jest": "^23.3.2",
-    "@types/node": "^10.10.1",
-    "@types/webpack-env": "^1.13.6",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^25.1.0",
+    "@types/node": "^13.5.1",
+    "@types/webpack-env": "^1.15.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "devserver-qrcode-webpack-plugin": "0.0.6",
-    "dotenv-webpack": "^1.5.7",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "file-loader": "^2.0.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.9",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
+    "file-loader": "^5.0.2",
+    "fork-ts-checker-webpack-plugin": "^4.0.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "jest": "^25.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "postcss-modules-values": "^1.3.0",
-    "react-hot-loader": "^4.3.11",
-    "style-loader": "^0.23.0",
-    "ts-jest": "^23.1.4",
-    "ts-loader": "^5.1.1",
-    "tslint": "^5.11.0",
-    "tslint-loader": "^3.6.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.0.3",
-    "uglifyjs-webpack-plugin": "^2.0.0",
-    "webpack": "^4.19.0",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.1.4"
+    "postcss-modules-values": "^3.0.0",
+    "react-hot-loader": "^4.12.19",
+    "style-loader": "^1.1.3",
+    "ts-jest": "^25.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
