--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
-    "start": "webpack-dev-server --hot --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "test": "env-cmd -f .env.example jest --watch",
+    "start": "env-cmd -f .env webpack-dev-server --hot --open --config webpack.dev.js",
+    "build": "env-cmd -f .env webpack --config webpack.prod.js",
     "lint:ts": "eslint './**/*.{js,ts,tsx}'",
     "lint:css": "stylelint \"src/**/*.tsx\"",
     "analyze-bundle": "webpack --config webpack.analyze.js --profile"
@@ -18,7 +18,9 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "setupFilesAfterEnv": ["<rootDir>/src/setup-tests.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setup-tests.ts"
+    ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
@@ -46,6 +48,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@hot-loader/react-dom": "^16.11.0",
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^25.1.0",
@@ -57,6 +60,7 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "devserver-qrcode-webpack-plugin": "0.0.6",
+    "env-cmd": "^10.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
