--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "postcss-modules-values": "^3.0.0",
     "react-hot-loader": "^4.12.19",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.4",
     "ts-jest": "^25.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
